<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_navigation_menu_summary"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/bottom_navigation_menu_daily"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/baseline_fitness_center_24"
        android:title="@string/bottom_navigation_menu_exercises"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/bottom_navigation_menu_me"/>
</menu>