<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTextField"
        style="?attr/textInputFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:hint="@string/first_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTextField"
        style="?attr/textInputFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/last_name_label"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTextField"
        app:layout_constraintStart_toStartOf="@+id/firstNameTextField"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email_label"
        app:layout_constraintEnd_toEndOf="@+id/lastNameTextField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameTextField"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTextField"
        style="?attr/textInputFilledStyle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/weight_label"
        app:layout_constraintStart_toStartOf="@+id/emailTextField"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sizeTextField"
        style="?attr/textInputFilledStyle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/size_label"
        app:layout_constraintEnd_toEndOf="@+id/emailTextField"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sizeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/update_button_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/updateResult"
        app:layout_constraintEnd_toEndOf="@+id/emailTextField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailTextField"
        app:layout_constraintTop_toBottomOf="@+id/weightTextField"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="#E35D5D"
        android:text="@string/delete_account_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/weightTextField"
        app:layout_constraintStart_toStartOf="@+id/updateButton"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="#42509F"
        android:text="@string/logout_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/updateButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sizeTextField"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />


    <TextView
        android:id="@+id/updateResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="24sp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/registerProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>